k8s/manifests-4f879c/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-4f879c
  namespace: journee
  labels:
    app: journee-4f879c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-4f879c
  template:
    metadata:
      labels:
        app: journee-4f879c
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-4f879c
          image: gcr.io/my-docker-471807/journee:4f879c-3d9001
          ports:
            - containerPort: 3000
