k8s/manifests-4f879c/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-4f879c
  namespace: journee
spec:
  selector:
    app: journee-4f879c
  ports:
    - port: 80
      targetPort: 3000
