k8s/manifests-4f879c/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journee-4f879c
  namespace: journee
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
    - host: journee-4f879c.aooba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: journee-4f879c
                port:
                  number: 80
